--- a/css/style.css
+++ b/css/style.css
@@ -185,8 +185,8 @@ transition: transform 250ms linear;
 .features-list__item {
     /* background-color: yellow; */
     display: flex;
-    width: 380px;
-    /* width: calc((100%-40px)/3); */
+    /* width: 380px; */
+    width: calc((100% - 40px)/3);
     
     margin-right: 20px;
     margin-bottom: 98px;
@@ -246,10 +246,29 @@ margin-left: 24px;
 }
 
 .team-list__item {
+    
     margin-right: 30px;
     /* width: ((100%-60px)/3); */
     width: 380px;
+    perspective: 600px;
 }
+
+.team-list__item:hover .rotate {
+    transform: rotateY(180deg);
+}
+
+.team-list__item:hover .wrapper {
+    transform: rotateY(180deg);
+}
+
+
+.rotate {
+position: relative;
+transform-style: preserve-3d;
+
+transition: transform 500ms linear;
+}
+
 
 .team-list__item:last-child {
     margin-right: 0;
@@ -276,6 +295,7 @@ margin-left: 24px;
     padding: 16px;
     border-left: 0.5px solid rgba(243, 129, 129, 0.5);
     border-right: 0.5px solid rgba(243, 129, 129, 0.5);
+
 }
 
 .icon-item:first-child {
@@ -299,7 +319,8 @@ margin-left: 24px;
 }
 
 .wrapper {
-    position: relative;
+    backface-visibility: hidden;
+    transition: transform 0ms linear;
     /* overflow: hidden; */
 }
 
@@ -312,18 +333,23 @@ margin-left: 24px;
     left: 0;
     top:0;
 
-    transform: scale(0);
+    transform: rotateY(180deg);
+
+
+    /* transform: scale(0); */
 
     /* transform: translateY(100%);*/
-    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1); 
+    /* transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);  */
 
     background-image: linear-gradient(to top, rgba(252, 227, 138, 0.9), rgba(243, 129, 129, 0.9));
     
 }
 
-.team-list__item:hover .overlay {
+
+
+/* .team-list__item:hover .overlay {
 transform: scale(1);
-}
+} */
 
 /* .team-list__item:hover .overlay {
 transform: translateY(0);
